--- a/visualization/ui/src/components/application/Application.module.css
+++ b/visualization/ui/src/components/application/Application.module.css
@@ -1,6 +1,7 @@
 .application {
   transition: all 0.2s ease-out;
   &:hover {
+    cursor: pointer;
     border-color: var(--mantine-color-cyan-5);
     transform: translate3d(0px, -8px, 13px);
   }
